@@ -5,6 +5,8 @@
 #include "message.h"
 #include "berval.h"
 #include "errors.h"
+#include "ldapcontrol.h"
+#include "constants.h"
 
 /*
  * Converts an LDAP message into a Python structure.
@@ -13,17 +15,25 @@
  * On failure, returns NULL, and sets an error.
  *
  * The message m is always freed, regardless of return value.
+ *
+ * If add_ctrls is non-zero, per-entry/referral/partial/intermediate
+ * controls will be added as a third item to each entry tuple
+ *
+ * If add_intermediates is non-zero, intermediate/partial results will
+ * be returned
  */
 PyObject *
-LDAPmessage_to_python(LDAP *ld, LDAPMessage *m)
+LDAPmessage_to_python(LDAP *ld, LDAPMessage *m, int add_ctrls, int add_intermediates)
 {
     /* we convert an LDAP message into a python structure.
      * It is always a list of dictionaries.
      * We always free m.
      */
 
-     PyObject* result;
+     PyObject *result, *pyctrls = 0;
      LDAPMessage* entry;
+     LDAPControl **serverctrls = 0;
+     int rc;
 
      result = PyList_New(0);
      if (result == NULL) {
@@ -56,7 +66,27 @@ LDAPmessage_to_python(LDAP *ld, LDAPMessage *m)
 		return NULL;
 	 }
 
-	 /* Fill attrdict with lists */
+	 rc = ldap_get_entry_controls( ld, entry, &serverctrls );
+	 if (rc) {
+	    Py_DECREF(result);
+	    ldap_msgfree( m );
+	    ldap_memfree(dn);
+	    return LDAPerror( ld, "ldap_get_entry_controls" );
+	 }
+
+	 /* convert serverctrls to list of tuples */
+	 if ( ! ( pyctrls = LDAPControls_to_List( serverctrls ) ) ) {
+	    int err = LDAP_NO_MEMORY;
+	    ldap_set_option( ld, LDAP_OPT_ERROR_NUMBER, &err );
+	    Py_DECREF(result);
+	    ldap_msgfree( m );
+	    ldap_memfree(dn);
+	    ldap_controls_free(serverctrls);
+	    return LDAPerror( ld, "LDAPControls_to_List" );
+	 }
+	 ldap_controls_free(serverctrls);
+
+  	 /* Fill attrdict with lists */
 	 for( attr = ldap_first_attribute( ld, entry, &ber );
 	      attr != NULL;
 	      attr = ldap_next_attribute( ld, entry, ber )
@@ -85,6 +115,7 @@ LDAPmessage_to_python(LDAP *ld, LDAPMessage *m)
 		ldap_msgfree( m );
 		ldap_memfree(attr);
 		ldap_memfree(dn);
+		Py_XDECREF(pyctrls);
 		return NULL;
 	     }
 
@@ -104,6 +135,7 @@ LDAPmessage_to_python(LDAP *ld, LDAPMessage *m)
 			ldap_msgfree( m );
 			ldap_memfree(attr);
 			ldap_memfree(dn);
+			Py_XDECREF(pyctrls);
 			return NULL;
 		    }
 		    Py_DECREF(valuestr);
@@ -114,9 +146,14 @@ LDAPmessage_to_python(LDAP *ld, LDAPMessage *m)
 	     ldap_memfree(attr);
 	 }
 
-	 entrytuple = Py_BuildValue("(sO)", dn, attrdict);
+	 if (add_ctrls) {
+	    entrytuple = Py_BuildValue("(sOO)", dn, attrdict, pyctrls);
+	 } else {
+	    entrytuple = Py_BuildValue("(sO)", dn, attrdict);
+	 }
 	 ldap_memfree(dn);
 	 Py_DECREF(attrdict);
+	 Py_XDECREF(pyctrls);
 	 PyList_Append(result, entrytuple);
 	 Py_DECREF(entrytuple);
 	 if (ber != NULL)
@@ -135,11 +172,21 @@ LDAPmessage_to_python(LDAP *ld, LDAPMessage *m)
 	     ldap_msgfree( m );
 	     return NULL;
 	 }
-	 if (ldap_parse_reference(ld, entry, &refs, NULL, 0) != LDAP_SUCCESS) {
+	 if (ldap_parse_reference(ld, entry, &refs, &serverctrls, 0) != LDAP_SUCCESS) {
 	     Py_DECREF(result);
 	     ldap_msgfree( m );
 	     return LDAPerror( ld, "ldap_parse_reference" );
 	 }
+	 /* convert serverctrls to list of tuples */
+	 if ( ! ( pyctrls = LDAPControls_to_List( serverctrls ) ) ) {
+	     int err = LDAP_NO_MEMORY;
+	     ldap_set_option( ld, LDAP_OPT_ERROR_NUMBER, &err );
+	     Py_DECREF(result);
+	     ldap_msgfree( m );
+	     ldap_controls_free(serverctrls);
+	     return LDAPerror( ld, "LDAPControls_to_List" );
+	 }
+	 ldap_controls_free(serverctrls);
 	 if (refs) {
 	     Py_ssize_t i;
 	     for (i=0; refs[i] != NULL; i++) {
@@ -149,10 +196,67 @@ LDAPmessage_to_python(LDAP *ld, LDAPMessage *m)
 	     }
 	     ber_memvfree( (void **) refs );
 	 }
-	 entrytuple = Py_BuildValue("(sO)", NULL, reflist);
+	 if (add_ctrls) {
+	    entrytuple = Py_BuildValue("(sOO)", NULL, reflist, pyctrls);
+	 } else {
+	    entrytuple = Py_BuildValue("(sO)", NULL, reflist);
+	 }
 	 Py_DECREF(reflist);
+	 Py_XDECREF(pyctrls);
 	 PyList_Append(result, entrytuple);
 	 Py_DECREF(entrytuple);
+     }
+     if (add_intermediates) {
+	for(entry = ldap_first_message(ld,m);
+	    entry != NULL;
+	    entry = ldap_next_message(ld,entry))
+	   {
+	      /* list of tuples */
+	      /* each tuple is OID, Berval, controllist */
+	      if ( LDAP_RES_INTERMEDIATE == ldap_msgtype( entry ) ) {
+		 PyObject* valtuple = PyList_New(0);
+		 PyObject *valuestr;
+		 PyObject *msgtype;
+		 char *retoid = 0;
+		 struct berval *retdata = 0;
+
+		 if (valtuple == NULL)  {
+		    Py_DECREF(result);
+		    ldap_msgfree( m );
+		    return NULL;
+		 }
+		 if (ldap_parse_intermediate( ld, entry, &retoid, &retdata, &serverctrls, 0 ) != LDAP_SUCCESS) {
+		    Py_DECREF(result);
+		    ldap_msgfree( m );
+		    return LDAPerror( ld, "ldap_parse_intermediate" );
+		 }
+		 /* convert serverctrls to list of tuples */
+		 if ( ! ( pyctrls = LDAPControls_to_List( serverctrls ) ) ) {
+		    int err = LDAP_NO_MEMORY;
+		    ldap_set_option( ld, LDAP_OPT_ERROR_NUMBER, &err );
+		    Py_DECREF(result);
+		    ldap_msgfree( m );
+		    ldap_controls_free(serverctrls);
+		    ldap_memfree( retoid );
+		    ber_bvfree( retdata );
+		    return LDAPerror( ld, "LDAPControls_to_List" );
+		 }
+		 ldap_controls_free(serverctrls);
+
+		 valuestr = LDAPberval_to_object(retdata);
+		 ber_bvfree( retdata );
+		 msgtype = LDAPconstant(LDAP_RES_INTERMEDIATE);
+		 valtuple = Py_BuildValue("(OsOO)", msgtype, retoid,
+					  valuestr ? valuestr : Py_None,
+					  pyctrls);
+		 Py_DECREF( msgtype );
+		 ldap_memfree( retoid );
+		 Py_DECREF(valuestr);
+		 Py_XDECREF(pyctrls);
+		 PyList_Append(result, valtuple);
+		 Py_DECREF(valtuple);
+	      }
+	   }
      }
      ldap_msgfree( m );
      return result;
